Fix z-index and pointer-events for select component

--- a/source/sass/components/_form.scss
+++ b/source/sass/components/_form.scss
@@ -45,7 +45,7 @@ input:disabled + label {
     opacity: .4;
 }
 
-button, 
+button,
 input[type='button'],
 input[type='reset'],
 input[type="submit"] {
@@ -162,7 +162,8 @@ form,
         width: 42px;
         height: 32px;
         color: $black;
-        z-index: -1
+        z-index: 1;
+        pointer-events: none;
     }
 
     select {
